--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-gitpython
-tqdm
-joblib
-astor
-docstring-parser
-gevent
-requests
-nltk
-numpy
-scikit-learn
-pandas
-gensim
-torch
-asttokens
+# < June 12, 2020
+gitpython==3.1.3 # May 31, 2020
+tqdm==4.46.1 # June 3, 2020
+joblib==0.15.1 # May 16, 2020
+astor==0.8.1 # December 10, 2019
+docstring-parser==0.7.1 # April 28, 2020
+gevent==20.6.1 # June 11, 2020
+requests==2.23.0 # February 19, 2020
+nltk==3.5 # April 13, 2020
+#numpy==1.18.5 # June 4, 2020
+numpy>1.18.5
+scikit-learn==0.23.1 # May 19, 2020
+#pandas==1.0.4 # May 29, 2020
+pandas>=1.0.4
+gensim==3.8.3 # May 4, 2020
+torch>=1.5.0 # April 21, 2020
+asttokens==2.0.4 # April 11, 2020
